--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@plunk/node": "^1.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
