--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "tailwindcss": "^3.3.0",
     "use-debounce": "^8.0.4"
   },
