--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
     "next": "13.0.2",
+    "paystack": "^2.0.1",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
+    "react-paystack": "^4.0.3",
     "tailwindcss": "^3.3.0",
     "use-debounce": "^8.0.4"
   },
